# dragonfly-gguf-client

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  notice.json  test_integration.sh
.github/workflows/: check-size.yml  deploy-tracker.yml  docker.yml  pr-labels.yml  release.yml
ci/: Dockerfile  Dockerfile.debug  Dockerfile.dfinit
deploy/ec2/: build-tracker.sh  deploy.sh  index.html  setup-nginx.sh
deploy/seeder/: Dockerfile
deploy/tracker/: Dockerfile  docker-compose.yml
deploy/tracker/config/: manager.yaml  scheduler.yaml  seeder.yaml
dragonfly-client/: Cargo.toml
dragonfly-client-backend/: Cargo.toml
dragonfly-client-backend/src/: gguf.rs  hugging_face.rs  lib.rs
dragonfly-client-metric/: Cargo.toml
dragonfly-client-p2p/: Cargo.toml
dragonfly-client-p2p/examples/: gguf_fetch.rs  gguf_seed.rs
dragonfly-client-p2p/src/: downloader.rs  lib.rs  node.rs  seed_import.rs  seeder.rs  tracker.rs
dragonfly-client-p2p/tests/: registry_e2e.rs
dragonfly-client/src/gc/: mod.rs
dragonfly-tracker/: Cargo.toml
dragonfly-tracker/src/: lib.rs  main.rs  routes.rs  store.rs  ui.rs
